simplify and rename